more spacing fixes
that's right, MORE.

--- a/assets/scss/templates/_front-page.scss
+++ b/assets/scss/templates/_front-page.scss
@@ -152,6 +152,9 @@
 
     &__figure {
       position: relative;
+      display: grid;
+      background: #575b64;
+      aspect-ratio: 14/9;
       transition: $animation-basic;
       opacity: 0.9;
     }
@@ -159,7 +162,7 @@
     &__title {
       font-size: 1.5rem;
       line-height: 1;
-      padding: 0.5rem 0;
+      padding-top: 0.75rem;
       color: $dark;
       text-align: left;
       width: 100%;
@@ -170,7 +173,7 @@
       line-height: 1.5;
       display: block;
       font-weight: 100;
-      margin-top: 0.5rem;
+      margin-top: 0.25rem;
     }
   }
 
